-
Bug
-
Resolution: Done
-
P2: Important
-
Qt Creator 4.8.0-beta2
-
None
The menu entry and toolbar are missing.
There are many actions in DebuggerEngine that are not registered anywhere (like m_watchAction, m_breakAction). I couldn't find a way to add an action to the menu in DebuggerEngine.
For Gerrit Dashboard: QTCREATORBUG-21454 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
245286,3 | Debugger: Fix handling of some actions after multiinferior split | 4.8 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |
245900,2 | GDB: Support operate by instruction also for core dump | 4.8 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |